<resources>
    <string name="app_name">Classificados</string>
    <string name="btn_buy">Buy</string>
    <string name="btn_favor">Favor</string>
    <string name="total_label">Total: $ %s</string>
    <string name="filter">Filter</string>
    <string name="list_activity_title">Classificados</string>
    <string name="filter_activity_title">Filter</string>
    <string name="details_activity_title">Details</string>
    <string name="change_view">Change View</string>
    <string name="show_snackbar">Show Snackbar</string>
    <string name="show_toast">Show Toast</string>
    <string name="ok">OK</string>
    <string name="my_msg">My Message</string>
    <string name="save">Save</string>
    <string name="show">Show</string>
    <string name="make_call">Make a Call</string>
    <string name="open_browser">Open Browser</string>
    <string name="request_permission">Enable CALL PHONE permission on your configs.</string>
    <string name="request_sms">Request SMS</string>
    <string name="request_sms_enable">Solicitação de SMS ativada.</string>
    <string name="preparing_data">Preparing data...</string>
    <string name="progress_data" formatted="false">Loading data %d%%...</string>
    <string name="form_title_activity">New Item</string>
    <string name="hint_title">Ad\'s title</string>
    <string name="hint_description">Ad\'s Description</string>
    <string name="hint_price">$ 0,00</string>
    <string name="edit">Edit</string>
    <string name="no_data">No Data.</string>
    <string name="delete">Delete</string>
    <string name="contacts">Contacts</string>
</resources>
