<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/change_view"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/change_view"
        app:showAsAction='ifRoom'
        />

    <item
        android:id="@+id/action_toast"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/show_toast"
        app:showAsAction='never'
        />

    <item
        android:id="@+id/action_snackbar"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/show_snackbar"
        app:showAsAction='never'
        />

    <item
        android:id="@+id/action_call"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/make_call"
        app:showAsAction='never'
        />

    <item
        android:id="@+id/action_browser"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/open_browser"
        app:showAsAction='never'
        />
</menu>