<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_image"
        android:background="@color/defaultImageBack"
        android:src="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="@dimen/image_height" />

    <LinearLayout
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="@dimen/content_padding"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:textStyle="bold"
            android:textSize="@dimen/title_size"
            android:text="Hello World!"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            />


        <TextView
            android:id="@+id/tv_description"
            android:layout_marginTop="8dp"
            android:text="Hello World!"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:text="@string/btn_favor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="favor"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_total"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/title_size"
            android:text="@string/total_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_buy"
            />

        <Button
            android:id="@+id/btn_buy"
            android:text="@string/btn_buy"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>
</LinearLayout>