<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>


    <ImageView
        android:id="@+id/iv_image"
        android:background="@color/defaultImageBack"
        android:scaleType="center"
        android:src="@drawable/image_default"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:padding="@dimen/default_margin_2x">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_title"
                        android:hint="@string/hint_title"
                        android:layout_width="match_parent"
                        android:lines="1"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/et_description"
                        android:hint="@string/hint_description"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/et_price"
                        android:hint="@string/hint_price"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_width="match_parent"
                        android:lines="1"
                        android:digits="0123456789."
                        android:inputType="numberDecimal"
                        android:textColor="@color/colorAccent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:layout_gravity="bottom|end"
            android:onClick="save"
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="wrap_content"
            app:srcCompat="@drawable/ic_save"
            android:layout_height="wrap_content" />
    </FrameLayout>


</LinearLayout>